intel/bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/log.txt
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:20:7: error: case value evaluates to 2147755008, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042400:        // VDS_E_NOT_SUPPORTED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:22:7: error: case value evaluates to 2147755009, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042401:        // VDS_E_INITIALIZED_FAILED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:24:7: error: case value evaluates to 2147755010, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042402:        // VDS_E_INITIALIZE_NOT_CALLED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:26:7: error: case value evaluates to 2147755011, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042403:        // VDS_E_ALREADY_REGISTERED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:28:7: error: case value evaluates to 2147755012, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042404:        // VDS_E_ANOTHER_CALL_IN_PROGRESS
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:30:7: error: case value evaluates to 2147755013, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042405:        // VDS_E_OBJECT_NOT_FOUND
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:32:7: error: case value evaluates to 2147755014, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042406:        // VDS_E_INVALID_SPACE
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:34:7: error: case value evaluates to 2147755015, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042407:        // VDS_E_PARTITION_LIMIT_REACHED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:36:7: error: case value evaluates to 2147755016, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042408:        // VDS_E_PARTITION_NOT_EMPTY
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:38:7: error: case value evaluates to 2147755017, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042409:        // VDS_E_OPERATION_PENDING
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:40:7: error: case value evaluates to 2147755018, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240A:        // VDS_E_OPERATION_DENIED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:42:7: error: case value evaluates to 2147755019, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240B:        // VDS_E_OBJECT_DELETED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:44:7: error: case value evaluates to 2147755020, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240C:        // VDS_E_CANCEL_TOO_LATE
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:46:7: error: case value evaluates to 2147755021, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240D:        // VDS_E_OPERATION_CANCELED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:48:7: error: case value evaluates to 2147755022, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240E:        // VDS_E_CANNOT_EXTEND
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:50:7: error: case value evaluates to 2147755023, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240F:        // VDS_E_NOT_ENOUGH_SPACE
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:52:7: error: case value evaluates to 2147755024, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042410:        // VDS_E_NOT_ENOUGH_DRIVE
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:54:7: error: case value evaluates to 2147755025, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042411:        // VDS_E_BAD_COOKIE
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
HLS FPGA Parse FAILED.
